# mcp-gemini-cli

./: .cspell.json  .prettierignore  CLAUDE.md  README.md  dprint.json  gemini-wrapper.sh  mise.toml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: cicd.yml
.mise/tasks/: clean.sh  format.sh  lint.sh  setup.sh  test.sh  update.sh
.serena/: project.yml
.serena/memories/: code_style_conventions.md  design_patterns_guidelines.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
mcp_gemini_cli/: __init__.py  __main__.py  server.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  sessions.md  systemPatterns.md  techContext.md
memory-bank/archive/2025-07-05-initial-implementation/: session-details.md
memory-bank/archive/2025-08-02-env-var-support/: session-details.md
tests/: __init__.py  test_server.py
